--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,16 @@
 <head>
 <style>
 .this {
-  border: 5px outset rgb(30, 255, 0);
-  background-color: rgb(19, 143, 137);    
+  border: 5px outset rgb(239, 241, 238);
+  background-color: rgb(65, 3, 180);    
   text-align: center;
 }
 </style>
 </head>
 <body>
 <div class="this">
-  <h2>This is parking ussd</h2>
-  <p>welcome to our parking payment which is easy and free for all</p>
+  <h2>This is a BKussd</h2>
+  <p>welcome to our BK USSD BANK which is help you access your bank details easly</p>
 </div>
 </body>
 </html>
