added new changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,16 @@
 <head>
 <style>
 .this {
-  border: 5px outset rgb(239, 241, 238);
-  background-color: rgb(65, 3, 180);    
+  border: 5px outset rgb(38, 8, 207);
+  background-color: rgb(213, 212, 214);    
   text-align: center;
 }
 </style>
 </head>
 <body>
 <div class="this">
-  <h2>This is a BKussd</h2>
-  <p>welcome to our BK USSD BANK which is help you access your bank details easly</p>
+  <h2>This is a Banking ussd</h2>
+  <p>welcome to our BK USSD  which is help you access your bank details easly</p>
 </div>
 </body>
 </html>
