--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div class="this">
-  <h2>This is a Banking ussd</h2>
-  <p>welcome to our BK USSD  which is help you access your bank details easly</p>
+  <h2>This is a IWACU Banking ussd</h2>
+  <p>welcome IWACU to our BK USSD  which is help you access your bank details easly</p>
 </div>
 </body>
 </html>
